added images and buttons

--- a/index.html
+++ b/index.html
@@ -17,6 +17,19 @@
         <li><button>Sign In</button></li>    
       </ul>
     </header>
+    <div id="main">
+      <img src="./images/Copy of google.png" alt="">
+      <div class="searchbox">
+        <input type="text" class="seek">
+        <div class="icons">
+          <div><img src="./images/Copy of search.png" alt=""></div>
+          <div><img src="./images/Copy of mic.png" alt=""></div>
+      <div class="buttons">
+        <button>Google Search</button>
+        <button>Rudebeard says Hello</button>
+      </div>
+    </div>
+
   </section>
 </body>
 </html>
