really close to end

--- a/index.html
+++ b/index.html
@@ -11,25 +11,32 @@
   <section>
     <header>
       <ul>
-        <li><a href="#">Gmail</a></li>
-        <li><a href="#">Images</a></li>
+        <li><a href="https://workspace.google.com/intl/en_ca/products/gmail/">Gmail</a></li>
+        <li><a href="https://www.pexels.com/">Images</a></li>
         <li><a href="#"><img src="./images/Copy of bars.png" alt="Bars"></a></li>
         <li><button>Sign In</button></li>    
       </ul>
     </header>
-    <div id="main">
+    <div class="main">
       <img src="./images/Copy of google.png" alt="">
-      <div class="searchbox">
-        <input type="text" class="seek">
+      <div class="searchBox">
+        <input type="text" class="search">
         <div class="icons">
           <div><img src="./images/Copy of search.png" alt=""></div>
-          <div><img src="./images/Copy of mic.png" alt=""></div>
+          
+        </div>
+      </div>   
       <div class="buttons">
-        <button>Google Search</button>
-        <button>Rudebeard says Hello</button>
+        <button><a href="https://www.google.com/" target="_blank">Google Search</a></button>
+        <button><a href="https://www.freecodecamp.org/" target="_blank">Rudebeard says Hello!</a></button>
       </div>
+      <ul class="languages">
+        <li>google offered in</li>
+        <li>turkish</li>
+        <li>english</li>
+      </ul>
     </div>
-
-  </section>
+    </section>
+    <footer><p>copyright &copy; reserved by  <span>o.r.a</span>  team</p></footer>
 </body>
 </html>
