everything is done

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
       </div>   
       <div class="buttons">
         <button><a href="https://www.google.com/" target="_blank">Google Search</a></button>
-        <button><a href="https://www.freecodecamp.org/" target="_blank">Rudebeard says Hello!</a></button>
+        <button><a href="https://www.youtube.com/watch?v=EZAnBqnQ_PU" target="_blank">Rudebeard says Hello!</a></button>
       </div>
       <ul class="languages">
-        <li>google offered in</li>
+        <li>google offered</li>
         <li>turkish</li>
         <li>english</li>
       </ul>
