some missing parts have been added

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       <ul>
         <li><a href="https://workspace.google.com/intl/en_ca/products/gmail/">Gmail</a></li>
         <li><a href="https://www.pexels.com/">Images</a></li>
+        <li><a href="https://www.pexels.com/">Store</a></li>
+        <li><a href="https://www.pexels.com/">About</a></li>
         <li><a href="#"><img src="./images/Copy of bars.png" alt="Bars"></a></li>
         <li><button>Sign In</button></li>    
       </ul>
