added footer part new updates

--- a/index.html
+++ b/index.html
@@ -9,16 +9,21 @@
 </head>
 <body>
   <section>
+    <!--header section-->
     <header>
-      <ul>
-        <li><a href="https://workspace.google.com/intl/en_ca/products/gmail/">Gmail</a></li>
-        <li><a href="https://www.pexels.com/">Images</a></li>
+      <ul class="header_left">
         <li><a href="https://www.pexels.com/">Store</a></li>
         <li><a href="https://www.pexels.com/">About</a></li>
+      </ul>
+      <ul class="header_right">
+        <li><a href="https://workspace.google.com/intl/en_ca/products/gmail/">Gmail</a></li>
+        <li><a href="https://www.pexels.com/">Images</a></li>
         <li><a href="#"><img src="./images/Copy of bars.png" alt="Bars"></a></li>
         <li><button>Sign In</button></li>    
       </ul>
     </header>
+    <!--header section ends-->
+    <!--main section-->
     <div class="main">
       <img src="./images/Copy of google.png" alt="">
       <div class="searchBox">
@@ -39,6 +44,19 @@
       </ul>
     </div>
     </section>
-    <footer><p>copyright &copy; reserved by  <span>o.r.a</span>  team</p></footer>
+    <!----> 
+    <footer>
+      <div>
+        <p>canada</p>
+    </footer>
+      </div>
+      <div class="footer">
+        <ul>
+          <li>advertising</li>
+          <li>business</li>
+          <li>how search works</li>
+        </ul>
+      </div>
+    
 </body>
 </html>
